Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
None
-
Qt Creator 4.11.0
-
None
Description
I have just upgraded to 4.11.0, and text has become black while it was white before.
Attachments
Issue Links
- is duplicated by
-
QTCREATORBUG-23398 Theme build/run environment tree view text
-
- Closed
-
-
QTCREATORBUG-23624 Environment configuration hard to read with dark style
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-23358 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
287765,5 | Utils: Use themed text color in EnvironmentWidget | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |