Utils: Use themed text color in EnvironmentWidget

Since we also have dark themes, we cannot always use black. Use the
application global QPalette colors which originate from the theme.

Task-number: QTCREATORBUG-23358
Change-Id: Id997e3b0d125d8e39fe7951b5dc827288b8086bb
Reviewed-by: David Schulz <david.schulz@qt.io>